--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,20 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,body {
+  padding: 0;
+  margin: 0;
 }
+
+body{
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+*{box-sizing: border-box;}
